更新模板模块字段
